<resources>
    <string name="app_name">PODD</string>
    <string name="action_settings">User setting</string>
    <string name="title_activity_test_form">TestFormActivity</string>
    <string name="title_activity_home">PODD</string>
    <string name="title_section1">Report</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_image">Image</string>
    <string name="title_activity_web_content">News detail</string>
    <string-array name="menu_titles">
        <item>Reports</item>
        <item>News</item>
        <item>Incidents</item>
        <item>Summary</item>
    </string-array>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot password</string>
    <string name="change_server_message">Server has been changed  to</string>
    <string name="username_reqired">Username is required</string>
    <string name="password_reqired">Password is required</string>
    <string name="login_error">Unable to login. Incorrect username or password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="request_fetching_data">Sending data</string>
    <string name="request_please_wait">Please wait</string>
    <string name="http_server_error">Server error, please contact administratior</string>
    <string name="server_error">Error on Server, please contact administration</string>
    <string name="form_data_require_error">Please correctly fill in all required fields</string>
    <string name="edittext_hint">Click to enter text</string>
    <string name="btn_next">Next &gt;</string>
    <string name="btn_prev">&lt; Previous</string>
    <string name="edit_btn">Edit</string>
    <string name="yes_choice">Yes</string>
    <string name="no_choice">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_not_ok">Cancel</string>
    <string name="app_version_code">Version</string>
    <string name="app_version_name">Version codename</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="time_at">at</string>
    <string name="title_activity_setting">Setting</string>
    <string name="personal_detail">Personal detail</string>
    <string name="about">About</string>
    <string name="server_address">Server address</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout_title">Logout confirmation</string>
    <string name="confirm_logout_text">All report data will be deleted, and any pending submission wiil be aborted.\n\n Do you really want to logout?</string>
    <string name="upload_image_success">Change profile image success</string>
    <string name="upload_image_error">Unable to upload images</string>
    <string name="reset_passsword_submit_error">Unable to reset password</string>
    <string name="reset_passsword_submit_success">Password reset is complete</string>
    <string-array name="pick_media_selection">
        <item>Take new picture</item>
        <item>Choose from album</item>
    </string-array>
    <string name="title_activity_report_type">Select reporting type</string>
    <string name="test_label">Test report</string>
    <string name="normal_case">No unusual incident</string>
    <string name="update_report_type">Refresh report type</string>
    <string name="btn_camera">Take new picture</string>
    <string name="btn_gallery">Choose form album</string>
    <string name="title_pick_media_options">Choose picture</string>
    <string name="title_image_edit_action">Edit Image</string>
    <string name="enter_image_note">Enter picture description</string>
    <string name="title_image_note_edit">Edit picture description</string>
    <string name="action_delete">Delete</string>
    <string name="title_image_item_selected">Select %d image(s)</string>
    <string-array name="image_edit_action_selection">
        <item>Delete image</item>
        <item>Edit image description</item>
    </string-array>
    <string name="title_activity_report">Report</string>
    <string name="progress_location_text">Finding location\n Please wait</string>
    <string name="unavailable_location_signal_text">Unable to find positioning signal.\nPlease move a phone to an open area.</string>
    <string name="test_title">Test</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_save_draft">Save draft</string>
    <string name="message_confirm_submit">Do you want to submit this report?</string>
    <string name="button_back_to_report_list">Back to report list</string>
    <string name="done_submit_message">This report has been successfully confirmed</string>
    <string name="alert_no_network_connection">Unable to connect to the Internet</string>
    <string name="title_confirm_back_report_home">Confirm exit</string>
    <string name="message_confirm_back_report_home">Do you want to abort this report\n and go back to report list?</string>
    <string name="agree">Agree</string>
    <string name="data_not_found">No data found</string>
    <string name="title_report_item_selected">Select %d report(s)</string>
    <string name="title_delete_report">Confirm deletion</string>
    <string name="message_confirm_delete_report">
        Do you want to delete all selected reports?\n
        Only draft or submission-pending reports will be deleted.
    </string>
    <string name="no_report_found_msg">There is no reports\n Press + to start one</string>
    <string name="choose_report_type_title">Please select type</string>
    <string name="confirm_title">Confirm</string>
    <string name="follow_report_confirm_msg">Do you want to follow up the report?</string>
    <string name="follow">Follow</string>
    <string name="draft">Draft</string>
    <string name="title_activity_visualization_volunteer">Volunteer</string>
    <string name="no_authority_area">No authority found</string>
    <string name="title_activity_visualization_area">Assessment</string>
    <string name="title_activity_visualization">Assessment</string>
    <string name="search">Search</string>
    <string name="grade">Reporting performance</string>
    <string name="total_report">Total report</string>
    <string name="type_report">Report type</string>
    <string name="animal_report">Number of animal illness/death</string>
    <string name="empty_animal_report">No animal-illness/death reports found</string>
    <string name="time_range_report">Most often reporting period</string>
    <string name="negative_report">Unusual incidents</string>
    <string name="positive_report">No unusual incident found</string>
    <string name="grade_A">Gold medal</string>
    <string name="grade_B">Silver medal</string>
    <string name="grade_C">Bronze medal</string>
    <string name="animal_sick">Animal illness</string>
    <string name="animal_death">Animal death</string>
    <string name="title_picker_choose_month">Select month for assessment</string>
    <string name="min_date">2014-12-01</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_data">No data found</string>
    <string name="summary_detail">Assessment</string>
    <string name="visual_month">Month :</string>
    <string name="volunteer">Volunteer</string>
    <string name="no_volunteer">No volunteers found</string>
    <string name="fail_refresh_dashboard">Error, please try again</string>
    <string name="empty_report">No reports found</string>
    <string name="try_again">Try again</string>
    <string name="dummy_report_type">Animal illness/death report</string>
    <string name="dummy_report_timeago">23 Feb 2015</string>
    <string name="dummy_report_address">Jamluang subdistrict authority, Kalayaniwattana district</string>
    <string name="dummy_report_description">Found 1 sick dog, 4 dead dogs from total of 10 dogs. Any near-by herds with Anthrax disease showing symptoms</string>
    <string name="thumbnail_description">Thumbnail image</string>
    <string name="report_date">Report date</string>
    <string name="report_incidentDate">Incident date</string>
    <string name="report_type">Report type</string>
    <string name="report_area">Incident area</string>
    <string name="by">By</string>
    <string name="contact">Contact</string>
    <string name="reporter_telephone">Personal telephone number</string>
    <string name="reporter_project_telephone">Project telephone number</string>
    <string name="report_summary">Report summary</string>
    <string name="data_explanation">Report details</string>
    <string name="form_data_explanation">Explanation</string>
    <string name="flag_confirm_case_title">Confirm case change</string>
    <string name="flag_confirm_case_message">Are you sure you want to make change to this case?</string>
    <string name="no_case_to_follow">No cases to follow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="follow_up_reports">Follow-up reports</string>
    <string name="comment_reports">Comments</string>
    <string name="follow_up_parent">Case report</string>
    <string name="empty_follow_up_list">There is no follow-up reports</string>
    <string name="follow_up_report_item_template">Report number #:id</string>
    <string name="report_activity_title_template">Report :type</string>
    <string name="report_select_flag">Follow up report :</string>
    <string name="report_not_found">No reports found</string>
    <string-array name="flags_optional">
        <item>- เลือก -</item>
        <item>Ignore</item>
        <item>OK</item>
        <item>Contact</item>
        <item>Follow</item>
        <item>Case</item>
    </string-array>
    <string-array name="flags_required">
        <item>Ignore</item>
        <item>OK</item>
        <item>Contact</item>
        <item>Follow</item>
        <item>Case</item>
    </string-array>
    <string-array name="flags_with_hint">
        <item>Ignore</item>
        <item>OK</item>
        <item>Contact</item>
        <item>Follow</item>
        <item>Case</item>
        <item>- ตั้งค่ารายงาน -</item>
    </string-array>
    <string name="set_report_state">Set report status</string>
    <string name="ok">OK</string>
    <string name="choose">Choose</string>
    <string name="choose_case">Choose a case to follow</string>
    <string name="set_flag_success">Change flag success</string>
    <string name="set_flag_error">Error, please try again</string>
    <string name="set_flag_forbidden">Sorry, you are not allowed to make changes</string>
    <string name="no_comment">No comments found</string>
    <string name="no_user">No users found</string>
    <string name="enter_comment">Enter comment</string>
    <string name="forget_password_title">Please enter identification number</string>
    <string name="code_title">Enter temporary password</string>
    <string name="reset_password_title">Reset password</string>
    <string name="new_password">New password</string>
    <string name="re_new_password">Enter new password (again)</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="serial_number">Identification number</string>
    <string name="telephone">Mobile number</string>
    <string name="email">Email (not required)</string>
    <string name="invite_code_title">Enter your invitation code</string>
    <string name="authority">Authority</string>
    <string name="home_menu_reports">Reports</string>
    <string name="home_menu_news">News</string>
    <string name="home_menu_incidents">Incidents</string>
    <string name="home_menu_summary">Summary</string>
</resources>