<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_title"
        android:layout_marginBottom="25dp"
        android:textSize="20dp"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_hint"
        android:imeOptions="actionNext"
        android:singleLine="true"
        style="@style/EditTextFlat"
        android:background="@drawable/ab_solid_white_podd"
        android:padding="5dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/code_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        android:layout_marginBottom="15dp"
        style="@style/NextButton" />

</LinearLayout>

