<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_title"
            android:layout_marginBottom="25dp"
            android:textSize="20dp"
            android:id="@+id/textView" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                style="@style/EditTextFlat"
                android:background="@drawable/edit_text_box"
                android:padding="5dp"
                android:layout_marginBottom="15dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/re_new_password"
                />

            <EditText
                android:id="@+id/re_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                style="@style/EditTextFlat"
                android:background="@drawable/edit_text_box"
                android:layout_marginBottom="25dp" />

        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            android:layout_marginBottom="15dp"
            style="@style/NextButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorArea"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="64dp"></LinearLayout>
</RelativeLayout>



