<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/invite_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invite_code_title"
            android:layout_marginBottom="12.5dp"
            android:textSize="20dp"
            android:id="@+id/textView" />

        <EditText
            android:id="@+id/invite_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            style="@style/EditTextFlat"
            android:background="@drawable/edit_text_box"
            android:padding="5dp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/invite_code_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:layout_marginBottom="15dp"
            style="@style/NextButton" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/form_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />

</RelativeLayout>