<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView" >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                style="@style/EditTextFlat"
                android:background="@drawable/ab_solid_white_podd"
                android:padding="5dp"
                android:layout_marginBottom="15dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                style="@style/EditTextFlat"
                android:background="@drawable/ab_solid_white_podd"
                android:layout_marginBottom="15dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/serial_number"
                />

            <EditText
                android:id="@+id/serial_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                style="@style/EditTextFlat"
                android:background="@drawable/ab_solid_white_podd"
                android:padding="5dp"
                android:layout_marginBottom="15dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telephone"
                />

            <EditText
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                style="@style/EditTextFlat"
                android:background="@drawable/ab_solid_white_podd"
                android:padding="5dp"
                android:layout_marginBottom="15dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                style="@style/EditTextFlat"
                android:background="@drawable/ab_solid_white_podd"
                android:padding="5dp"
                android:layout_marginBottom="15dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authority"
                />

            <EditText
                android:id="@+id/invite_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                style="@style/EditTextFlat"
                android:background="@drawable/ab_solid_white_podd"
                android:padding="5dp"
                android:layout_marginBottom="15dp"
                android:enabled="false"/>
        </LinearLayout>


        <Button
            android:id="@+id/register_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:layout_marginBottom="15dp"
            style="@style/NextButton" />

    </LinearLayout>

</ScrollView>